# MyPhysicsEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh
Controller/: Brain.cpp  Brain.h  CMakeLists.txt
Interfaces/: IObserved.h  IObserver.h  Shape.h  Vector2D.h
Model/: CMakeLists.txt  Nature.h  World.cpp  World.h
Model/Objects/: Masks.cpp  Object.h  Square.h  Types.h
Model/Shapes/: Square.cpp  Square.h
View/: CMakeLists.txt  Screen.cpp  Screen.h  ShapeRenderer.cpp  ShapeRenderer.h
View/CMD/: CMakeLists.txt  Viewer.cpp  Viewer.h
View/SDL/: Viewer.cpp  Viewer.h
include/: Vector.h  Vector_Calc.h  Vector_Helpers.h
